<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/signup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".SignUpActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/white_greyish"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_baseline_account_box_24"
        android:drawablePadding="8dp"
        android:gravity="clip_vertical"
        android:hint="@string/full_name"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:autofillHints="" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish"/>

    <EditText
        android:id="@+id/userEmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_baseline_mail_24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish"/>

    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_baseline_local_phone_24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/mobile_no"
        android:inputType="phone"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:autofillHints="" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish"/>

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/location"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish"/>

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish"/>

    <CheckBox
        android:id="@+id/terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/by_clicking_signup_you_agree_all_the_terms_and_conditions"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_selector"
        android:padding="3dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/alreay_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/already_have_account_login_here"
        android:textColor="@color/text_selector"
        android:textSize="15sp"/>
</LinearLayout>

